arc-builtdroot-linux-uclibc be renamed to arc-linux
Signed-off-by: Yunlu Zhang <Yunlu.Zhang@synopsys.com>

02:54:17 **** Build of configuration Debug for project hsl_linux ****
make all
Building file: ../src/crt0.S
Invoking: ARC Linux uClibc GCC Assembler
arc-linux-gcc -x assembler-with-cpp -Wall -Wa,-adhlns="src/crt0.o.lst" -c -fmessage-length=0 -MMD -MP -MF"src/crt0.d" -MT"src/crt0.d" -mHS -mmpy-option=2 -g3 -gdwarf-2 -mbarrel-shifter -mshift-assist -mcode-density -mswap -mnorm -o "src/crt0.o" "../src/crt0.S"
Finished building: ../src/crt0.S

Building file: ../src/hsl_linux.c
Invoking: ARC Linux uClibc GCC C Compiler
arc-linux-gcc -O0 -Wall -Wa,-adhlns="src/hsl_linux.o.lst" -c -fmessage-length=0 -MMD -MP -MF"src/hsl_linux.d" -MT"src/hsl_linux.d" -mHS -mmpy-option=2 -g3 -gdwarf-2 -mbarrel-shifter -mshift-assist -mcode-density -mswap -mnorm -o "src/hsl_linux.o" "../src/hsl_linux.c"
Finished building: ../src/hsl_linux.c

Building target: hsl_linux.elf
Invoking: ARC Linux uClibc GCC C Linker
arc-linux-gcc -T"/home/yunluz/runtime-EclipseApplication/hsl_linux/lds/arcelf.lds" -nostartfiles -Wl,-Map,hsl_linux.map -mHS -mmpy-option=2 -g3 -gdwarf-2 -mbarrel-shifter -mshift-assist -mcode-density -mswap -mnorm -o "hsl_linux.elf"  ./src/crt0.o ./src/hsl_linux.o
Finished building target: hsl_linux.elf

Invoking: ARC Linux uClibc  Print Size
arc-linux-size  --format=berkeley hsl_linux.elf
   text	   data	    bss	    dec	    hex	filename
   1237	    116	  18436	  19789	   4d4d	hsl_linux.elf
Finished building: hsl_linux.siz

02:54:17 Build Finished (took 220ms)

--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -397,7 +397,7 @@
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.c"
                class="org.eclipse.cdt.make.internal.core.scannerconfig2.GCCSpecsRunSIProvider"
-               command="arc-buildroot-linux-uclibc-gcc">
+               command="arc-linux-gcc">
          </run>
          <scannerInfoConsoleParser
                class="org.eclipse.cdt.make.internal.core.scannerconfig.gnu.GCCSpecsConsoleParser">
@@ -423,7 +423,7 @@
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.cpp"
                class="org.eclipse.cdt.make.internal.core.scannerconfig2.GCCSpecsRunSIProvider"
-               command="arc-buildroot-linux-uclibc-g++">
+               command="arc-linux-g++">
          </run>
          <scannerInfoConsoleParser
                class="org.eclipse.cdt.make.internal.core.scannerconfig.gnu.GCCSpecsConsoleParser">
@@ -443,7 +443,7 @@
       </buildOutputProvider>
       <scannerInfoProvider providerId="specsFile">
          <run
-               command="arc-buildroot-linux-uclibc-gcc"
+               command="arc-linux-gcc"
                arguments="-E -P -v -dD ${plugin_state_location}/${specs_file}"
                class="org.eclipse.cdt.make.internal.core.scannerconfig2.GCCSpecsRunSIProvider"/>
          <scannerInfoConsoleParser class="org.eclipse.cdt.make.internal.core.scannerconfig.gnu.GCCSpecsConsoleParser"/>
@@ -510,7 +510,7 @@
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.c"
                class="org.eclipse.cdt.make.internal.core.scannerconfig2.GCCSpecsRunSIProvider"
-               command="arc-buildroot-linux-uclibc-gcc">
+               command="arc-linux-gcc">
          </run>
          <scannerInfoConsoleParser
                class="org.eclipse.cdt.make.internal.core.scannerconfig.gnu.GCCSpecsConsoleParser">
@@ -536,7 +536,7 @@
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.cpp"
                class="org.eclipse.cdt.make.internal.core.scannerconfig2.GCCSpecsRunSIProvider"
-               command="arc-buildroot-linux-uclibc-g++">
+               command="arc-linux-g++">
          </run>
          <scannerInfoConsoleParser
                class="org.eclipse.cdt.make.internal.core.scannerconfig.gnu.GCCSpecsConsoleParser">
@@ -562,7 +562,7 @@
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/${specs_file}"
                class="org.eclipse.cdt.make.internal.core.scannerconfig2.GCCSpecsRunSIProvider"
-               command="arc-buildroot-linux-uclibc-gcc">
+               command="arc-linux-gcc">
          </run>
          <scannerInfoConsoleParser
                class="org.eclipse.cdt.make.internal.core.scannerconfig.gnu.GCCSpecsConsoleParser">
@@ -1154,7 +1154,7 @@
             superClass="cdt.managedbuild.target.gnu.builder">
       </builder>
       <tool
-            command="arc-buildroot-linux-uclibc-gcc"
+            command="arc-linux-gcc"
             commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.uclibc.ARCManagedCommandLineGenerator"
             errorParsers="org.eclipse.cdt.core.GCCErrorParser;org.eclipse.cdt.core.GASErrorParser"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.assembler"
@@ -1353,7 +1353,7 @@
          </outputType>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc-gcc"
+            command="arc-linux-gcc"
             commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.uclibc.ARCManagedCommandLineGenerator"
             errorParsers="org.eclipse.cdt.core.GCCErrorParser"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.c.compiler"
@@ -1639,7 +1639,7 @@
          </outputType>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc-g++"
+            command="arc-linux-g++"
             commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.uclibc.ARCManagedCommandLineGenerator"
             errorParsers="org.eclipse.cdt.core.GCCErrorParser"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.cpp.compiler"
@@ -1957,7 +1957,7 @@
          </outputType>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc-gcc"
+            command="arc-linux-gcc"
             commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.uclibc.ARCManagedCommandLineGenerator"
             errorParsers="org.eclipse.cdt.core.GLDErrorParser"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.c.linker"
@@ -2155,7 +2155,7 @@
          </option>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc-ld"
+            command="arc-linux-ld"
             commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.uclibc.ARCManagedCommandLineGenerator"
             errorParsers="org.eclipse.cdt.core.GLDErrorParser"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.cpp.linker"
@@ -2353,7 +2353,7 @@
          </option>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc-ar"
+            command="arc-linux-ar"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.archiver"
             isAbstract="false"
             name="ARC uClibc GCC Archiver"
@@ -2418,7 +2418,7 @@
          </outputType>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc--objcopy"
+            command="arc-linux-objcopy"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.createflash"
             name="ARC GNU uClibc Create Flash Image"
             natureFilter="both">
@@ -2549,7 +2549,7 @@
          </option>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc-objdump"
+            command="arc-linux-objdump"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.createlisting"
             name="ARC GNU Create Listing"
             natureFilter="both"
@@ -2593,7 +2593,7 @@
          </option>
       </tool>
       <tool
-            command="arc-buildroot-linux-uclibc-size"
+            command="arc-linux-size"
             commandLinePattern="${COMMAND} ${INPUTS} ${FLAGS}"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.printsize"
             name="ARC GNU uClibc Print Size"
@@ -3068,7 +3068,7 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.addtools.printsize">
          </option>
          <tool
-               command="arc-buildroot-linux-uclibc-gcc"
+               command="arc-linux-gcc"
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.assembler.base"
                isAbstract="false"
                name="ARC Linux uClibc GCC Assembler"
@@ -3080,7 +3080,7 @@
             </inputType>
          </tool>
          <tool
-               command="arc-buildroot-linux-uclibc-gcc"
+               command="arc-linux-gcc"
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.compiler.base"
                isAbstract="false"
                name="ARC Linux uClibc GCC C Compiler"
@@ -3092,7 +3092,7 @@
             </inputType>
          </tool>
          <tool
-               command="arc-buildroot-linux-uclibc-g++"
+               command="arc-linux-g++"
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.compiler.base"
                isAbstract="false"
                name="ARC Linux uClibc GCC C++ Compiler"
@@ -3104,21 +3104,21 @@
             </inputType>
          </tool>
          <tool
-               command="arc-buildroot-linux-uclibc-gcc"
+               command="arc-linux-gcc"
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.c.linker.base"
                isAbstract="false"
                name="ARC Linux uClibc GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.c.linker">
          </tool>
          <tool
-               command="arc-buildroot-linux-uclibc-ld"
+               command="arc-linux-ld"
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC Linux uClibc GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.cpp.linker">
          </tool>
          <tool
-               command="arc-buildroot-linux-uclibc-gcc"
+               command="arc-linux-gcc"
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.archiver.base"
                isAbstract="false"
                name="ARC Linux uClibc GCC Archiver"
@@ -3166,7 +3166,7 @@
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.printsize.base"
-               command="arc-buildroot-linux-uclibc-size"
+               command="arc-linux-size"
                isAbstract="false"
                name="ARC Linux uClibc  Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.printsize">
@@ -3695,7 +3695,7 @@
             </enablement>
          </tool>
          <tool
-               command="arc-buildroot-linux-uclibc-size"
+               command="arc-linux-size"
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.printsize.base.hs"
                isAbstract="false"
                name="ARC Linux uClibc  Print Size"
@@ -5506,7 +5506,7 @@
          </outputType>
       </tool>
       <tool
-            command="arceb-buildroot-linux-uclibc--objcopy"
+            command="arceb-buildroot-linux-uclibc-objcopy"
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.createflash"
             name="ARC GNU uClibc Create Flash Image (eb)"
             natureFilter="both">
